--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,10 @@ img {
   vertical-align: middle;
 }
 
+.projeto {
+  display: block;
+}
+
 .container {
   width: 1200px;
   margin-right: auto;
@@ -209,7 +213,6 @@ a:hover {
   height: 2300px;
   width: 100%;
   margin-top: 0;
-  border: 1px solid black;
   padding-top: 84px;
 }
 
@@ -230,5 +233,22 @@ a:hover {
 
 .work-image {
   height: 240px;
-  margin: 60px 20px ;
+  margin: 20px 60px 20px 0;
 }
+
+.projeto {
+  margin-left: 60px;
+  margin-bottom: 20px;
+}
+
+/*FOOTER*/
+
+.footer {
+  background-color: #373B47;
+  height: 84px;
+  color: #fff;
+  text-align: center;
+  padding-top: 20px;
+  font-weight: bold;
+}
+
